# cm

./: .gitignore  AGENTS.md  AUTORESEARCH.md  CONTRIBUTING.md  Cargo.toml  README.md  RESULTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: merge.yml  scorekeeper.yml  verify.yml
corpus/: baselines.tsv
docs/: app.js  index.html  styles.css
docs/proposals/: 0001-complexity-and-memory-scoring.md  0001-lines-evidence.txt
history/: README.md  TEMPLATE.md
history/entries/: 0001-baseline.md  0002--10d9e.md  0003--10d9e.md  0004--10d9e.md  0005--10d9e.md  0006--10d9e.md  0007--10d9e.md  0008--10d9e.md  0009--10d9e.md  0010--10d9e.md  0011--10d9e.md  0012--10d9e.md  0013--10d9e.md  0014--10d9e.md  0015--10d9e.md  0016--10d9e.md  0017--10d9e.md  0018--10d9e.md  0019--10d9e.md  0020--10d9e.md  0021--10d9e.md  0022--10d9e.md  0023--10d9e.md  0024--10d9e.md  0025--10d9e.md  0026--10d9e.md  0027--10d9e.md  0028--10d9e.md  0029--10d9e.md  0030--10d9e.md  0031--10d9e.md  0032--10d9e.md  0033--10d9e.md  0034--10d9e.md  0035--10d9e.md  0036--10d9e.md  0037--10d9e.md  0038--10d9e.md  0039--10d9e.md  0040--10d9e.md  (+33 more)
metrics/heapchurn/: Cargo.toml
metrics/heappeak/: Cargo.toml
metrics/host/: Cargo.toml
metrics/lines/: Cargo.toml
metrics/lines/src/: main.rs
metrics/mem/: Cargo.toml
metrics/memmeter/: Cargo.toml
metrics/memmeter/src/: main.rs
scripts/: build-leaderboard.py  ci-parse-pr-body.sh  ci-publish.sh  ci-score.sh  evaluate.sh  guard.sh  measure-complexity.sh  measure-heapchurn.sh  measure-heappeak.sh  measure-lines.sh  measure-memcost.sh  measure-memory.sh  record.sh  submit.sh
src/: lib.rs  main.rs
tests/: roundtrip.rs
(+19 files in other folders)
