[package]
name = "cm"
version = "0.1.0"
edition = "2021"
description = "Context-mixing compressor with a frozen autoresearch harness"

[lib]
name = "cm"
path = "src/lib.rs"

[[bin]]
name = "cm"
path = "src/main.rs"

[features]
# Deterministic complexity metric: compiles in a hot-path work-unit counter
# (mixer dot terms + context-model accesses). Off by default, so the scored
# build has zero overhead and byte-identical output. Build the measurement
# binary with `cargo build --release --features metrics` and run `cm metrics`.
metrics = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
